--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -31,11 +31,11 @@
 	.block.isResizing { cursor: col-resize; user-select: none; }
 	
 	.block.showMenu > .wrapMenu > .icon.dnd { opacity: 1; }
-	.block.isAdding.top > .wrapContent > .selectable > .dropTarget { box-shadow: 0px 2px $colorOrange inset; }
-	.block.isAdding.bottom > .wrapContent > .selectable > .dropTarget { box-shadow: 0px -2px $colorOrange inset; }
+	.block.isAdding.top > .wrapContent > .selectable > .dropTarget { box-shadow: 0px 2px $colorOrange inset; border-radius: 0px 0px 4px 4px !important; }
+	.block.isAdding.bottom > .wrapContent > .selectable > .dropTarget { box-shadow: 0px -2px $colorOrange inset; border-radius: 4px 4px 0px 0px !important; }
 	
-	.block.isAddingMenu.mTop > .wrapContent > .selectable > .dropTarget { box-shadow: 0px 2px $colorOrange inset; }
-	.block.isAddingMenu.mBottom > .wrapContent > .selectable > .dropTarget { box-shadow: 0px -2px $colorOrange inset; }
+	.block.isAddingMenu.mTop > .wrapContent > .selectable > .dropTarget { box-shadow: 0px 2px $colorOrange inset; border-radius: 0px 0px 4px 4px !important; }
+	.block.isAddingMenu.mBottom > .wrapContent > .selectable > .dropTarget { box-shadow: 0px -2px $colorOrange inset; border-radius: 4px 4px 0px 0px !important; }
 	
 	.block > .wrapContent > .children.canToggle { display: none; }
 	.block.isToggled > .wrapContent > .children { display: block; }
