--- a/src/scss/menu/block/color.scss
+++ b/src/scss/menu/block/color.scss
@@ -1,9 +1,12 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuBlockColor { width: 208px; }
+	.menu.menuBlockColor { width: 208px; padding: 12px 0px; }
 	.menu.menuBlockColor {
-		.section { padding: 12px 0px 0px 0px; }
+		.section { padding: 12px 0px; }
+		.section:first-child { padding-top: 0px; }
+		.section:last-child { padding-bottom: 0px; }
+		
 		.section > .name { padding: 0px 16px; margin-bottom: 10px; }
 		
 		.item { padding: 2px 16px; }
