--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -1,5 +1,11 @@
 @import "~scss/_vars";
 
+@keyframes subnavHoverHelp {
+	0% { height: 100%; }
+	99% { height: 100%; }
+	100% { height: 0px; }
+}
+
 .menus {
 	.dimmer { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 102; background: rgba(0,0,0,0); }
 	
@@ -31,6 +37,8 @@
 	
 	.menu.vertical { width: 176px; }
 	.menu.vertical {
+		.content { overflow-y: auto; }
+	
 		.title { 
 			font-size: 13px; line-height: 18px; margin: 0px; padding: 7px 16px; font-weight: 400; color: #aca996;
 			letter-spacing: 0.08px; 
@@ -42,6 +50,22 @@
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item:hover, .item.active { background: #f3f2ec; }
+		
+		
+		.item.withChildren:hover::before, .item.withChildren:hover::after {
+			content: ""; position: absolute; z-index: 1000; right: 0px; width: 100%; height: 100%; animation: subnavHoverHelp 1.5s;
+			background-color: fuchsia; opacity: .3;
+		}
+		
+		.item.withChildren:hover::before {
+			bottom: -100%;
+			clip-path: polygon(0% 0%, 100% 0%, 100% 100%);
+		}
+		
+		.item.withChildren:hover::after {
+			top: -100%;
+			clip-path: polygon(0% 100%, 100% 0%, 100% 100%);
+		}
 		
 		.icon { margin-right: 8px; }
 		.icon.dnd { width: 7px; height: 12px; background-image: url('~img/icon/dnd.svg'); margin-right: 10px; }
@@ -78,8 +102,4 @@
 			 .arrow { background-image: url('~img/icon/menu/action/arrow1.svg'); transform: rotateZ(-180deg); }
 		}
 	}
-}
-
-.menuMain {
-	overflow-x: hidden; overflow-y: auto;
 }
