--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -1,9 +1,9 @@
 @import "~scss/_vars";
 
 @keyframes subnavHoverHelp {
-	0% { height: 100%; }
-	99% { height: 100%; }
-	100% { height: 0px; }
+	0% { display: block; }
+	99% { display: block; }
+	100% { display: none; }
 }
 
 .menus {
@@ -52,7 +52,7 @@
 		.item:hover, .item.active { background: #f3f2ec; }
 		
 		.item.withChildren:hover::before, .item.withChildren:hover::after {
-			content: ""; position: absolute; z-index: 1000; right: 0px; width: 100%; height: 100%; animation: subnavHoverHelp 1.5s;
+			content: ""; position: absolute; z-index: 1000; right: 0px; width: 80%; height: 100%; animation: subnavHoverHelp 1.5s;
 			background-color: fuchsia; opacity: .3;
 		}
 		
