--- a/src/scss/menu/block/color.scss
+++ b/src/scss/menu/block/color.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .menus {
-	.menu.menuBlockColor { width: 208px; padding: 12px 0px; }
+	.menu.menuBlockColor { padding: 12px 0px; }
 	.menu.menuBlockColor {
 		.content { max-height: 450px; }
 	
