--- a/src/scss/menu/account.scss
+++ b/src/scss/menu/account.scss
@@ -4,7 +4,9 @@
 	.menu.menuAccount { width: 288px; border-radius: 12px; padding: 0px; }
 	.menu.menuAccount {
 		.content { max-height: 330px; }
-		.item { padding: 12px; } 
+		.item { padding: 12px; }
+		.item:hover { background: #f3f2ec; }
+		 
 		.item {
 			.icon.user { vertical-align: top; margin-right: 8px; }
 			.info { display: inline-block; vertical-align: top; width: calc(100% - 48px); }
