--- a/src/scss/menu/help.scss
+++ b/src/scss/menu/help.scss
@@ -3,6 +3,8 @@
 .menus {
 	.menu.menuHelp { width: 224px; }
 	.menu.menuHelp {
+		.item:hover { background: #f3f2ec; }
+	
 		.icon { width: 24px; height: 24px; }
 		.icon.help { background-size: 20px 20px; background-image: url('~img/icon/menu/help/help0.svg'); }
 		.icon.chat { background-size: 18px 20px; background-image: url('~img/icon/menu/help/chat0.svg'); }
