--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -44,6 +44,10 @@
 .icon.undo { background-image: url('~img/icon/menu/action/undo0.svg'); }
 .icon.redo { background-image: url('~img/icon/menu/action/redo0.svg'); }
 
+.icon.align.left { background-image: url('~img/icon/menu/align/left.svg'); }
+.icon.align.center { background-image: url('~img/icon/menu/align/center.svg'); }
+.icon.align.right { background-image: url('~img/icon/menu/align/right.svg'); }
+
 .icon.color {
 	.inner { 
 		border: 1px solid #dfddd0; width: 22px; height: 22px; line-height: 22px; text-align: center;
