--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -52,7 +52,8 @@
 		.item.active { background: #f3f2ec; }
 		
 		.item.withChildren:hover::before, .item.withChildren:hover::after {
-			content: ""; position: absolute; z-index: 1000; right: 0px; width: 80%; height: 100%; animation: subnavHoverHelp 1.5s;
+			content: ""; position: absolute; z-index: 1000; right: 0px; width: 30%; height: 30%; animation: subnavHoverHelp 1s;
+			opacity: 0.3; background: pink;
 		}
 		
 		.item.withChildren:hover::before { bottom: -100%; clip-path: polygon(0% 0%, 100% 0%, 100% 100%); }		
