--- a/src/scss/menu/smile.scss
+++ b/src/scss/menu/smile.scss
@@ -17,12 +17,30 @@
 		}
 	
 		.items { overflow: auto; height: 392px; }
-		.section { padding-bottom: 4px; }
+		.empty { height: 100%; line-height: 392px; padding: 16px; text-align: center; }
+		.empty {
+			b { display: block; font-weight: 400; color: $colorBlack; }
+			.txt { line-height: 24px; color: #aca996; }
+		}
+		
+		.section { padding-top: 0px; padding-bottom: 4px; border: 0px; }
 		.section:first-child { padding-top: 8px; }
 		.section > .name { color: #e89d00; }
-		.section > .list { padding: 0px 16px; }
+		.section > .list { padding: 0px 12px; }
 		
-		.smile { margin: 0px 8px 4px 0px; cursor: pointer; }
-		.smile:nth-child(12n + 12) { margin-right: 0px; }
+		.item { 
+			cursor: pointer; width: 32px; height: 32px; position: relative; border-radius: 4px; display: inline-block;
+			vertical-align: top; padding: 0px;
+		}
+		.item:hover, .item.active { background: #f3f2ec; }
+		.item {
+			.smile { position: absolute; left: 50%; top: 50%; margin: -12px 0px 0px -12px; }
+		}
+	}
+	
+	.menu.menuSmileSkin { padding: 10px; white-space: nowrap; }
+	.menu.menuSmileSkin {
+		.item { display: inline-block; vertical-align: top; margin-right: 8px; cursor: pointer; }
+		.item:last-child { margin: 0px; }
 	}
 }
