--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -25,6 +25,11 @@
 		.dropTarget.isOver.bottom { border-radius: 4px 4px 0px 0px !important; }
 		.dropTarget.isOver.left { border-radius: 0px 4px 4px 0px !important; }
 		.dropTarget.isOver.right { border-radius: 4px 0px 0px 4px !important; }
+		
+		.selectionOver { 
+			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: #837940; opacity: 0.1; border-radius: 4px;
+			display: none; 
+		}
 	}
 	
 	.block.isResizing { cursor: col-resize; user-select: none; }
@@ -42,8 +47,7 @@
 	
 	.block > .wrapContent > .selectable.isDragging > .dropTarget { opacity: 0.3; }
 	
-	.block.isSelected > .wrapContent > .selectable > .dropTarget { background: #f7f5f0 !important; border-radius: 4px; }
-	.block.isSelected .children .selectable { background: #f7f5f0; border-radius: 4px; }
+	.block.isSelected .selectionOver { display: block; }
 	
 	.block.blockIcon > .wrapMenu { visibility: hidden; }
 }
