--- a/src/scss/page/main/edit.scss
+++ b/src/scss/page/main/edit.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
 .pageMainEdit {
-	.wrapper { width: 704px; margin: 0px auto; padding: 96px 0px; }
+	.wrapper { width: 704px; margin: 0px auto; padding: 0px 0px 96px 0px; }
 	.blocks { margin-left: -48px; }
 }
