--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -1,5 +1,6 @@
 @import "~scss/_vars";
 
+.editor { position: relative; }
 .editor {
 	.icon.buttonAdd { 
 		width: 20px; height: 20px; border-radius: 100%; border: solid 1px #d2d0c2; position: absolute; z-index: 5; cursor: pointer; user-select: none;
@@ -8,9 +9,9 @@
 	}
 	.icon.buttonAdd:hover { background-image: url('~img/icon/block/add1.svg'); background-color: $colorOrange; border-color: $colorOrange; }
 	
-	.controls { padding-top: 96px; position: relative; z-index: 1; }
+	.controls { position: absolute; width: 100%; height: 220px; left: 0px; top: -96px; z-index: 1; line-height: 18px; }
 	.controls {
-		.sides { display: flex; }
+		.sides { display: flex; position: absolute; left: 0px; top: 96px; width: 100%; }
 		.side { width: 50%; }
 		.side.right { text-align: right; }
 		
@@ -43,7 +44,6 @@
 }
 
 .editor.withIcon {
-	.blocks { margin-top: -18px; }
 	.controls {
 		.btn.addIcon { display: none; }
 	}
