--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -1,6 +1,6 @@
 @import "~scss/_vars";
 
-.editor { position: relative; }
+.editor { position: relative; padding-top: 18px; }
 .editor {
 	.icon.buttonAdd { 
 		width: 20px; height: 20px; border-radius: 100%; border: solid 1px #d2d0c2; position: absolute; z-index: 5; cursor: pointer; user-select: none;
@@ -9,7 +9,7 @@
 	}
 	.icon.buttonAdd:hover { background-image: url('~img/icon/block/add1.svg'); background-color: $colorOrange; border-color: $colorOrange; }
 	
-	.controls { position: absolute; width: 100%; height: 220px; left: 0px; top: -96px; z-index: 1; line-height: 18px; }
+	.controls { position: absolute; width: 100%; height: 156px; left: 0px; top: -96px; z-index: 1; line-height: 18px; }
 	.controls {
 		.sides { display: flex; position: absolute; left: 0px; top: 96px; width: 100%; }
 		.side { width: 50%; }
@@ -43,7 +43,9 @@
 	}
 }
 
+.editor.withIcon { padding-top: 0px; }
 .editor.withIcon {
+	.controls { height: 220px; }
 	.controls {
 		.btn.addIcon { display: none; }
 	}
