#111: block cover components and styles

--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -48,7 +48,7 @@
 	.icon.back:hover, .icon.forward:hover { background-image: url('~img/icon/back1.svg'); }
 }
 
-.headerMainEdit { background: #fff; padding: 9px 0px 9px 80px; }
+.headerMainEdit { background: #fff; padding: 8px 0px 8px 80px; height: 40px; line-height: 24px; }
 .headerMainEdit {
 	.menu { top: 8px; right: 12px; }
 	.menu {
