--- a/src/scss/block/common.scss
+++ b/src/scss/block/common.scss
@@ -4,7 +4,7 @@
 	.block { padding: 1px 0px; word-break: break-word; display: flex; flex: auto; position: relative; }
 	.block {
 		.wrapMenu { width: 48px; text-align: right; }
-		.wrapContent { width: calc(100% - 48px); position: relative; overflow: hidden; }
+		.wrapContent { width: calc(100% - 48px); position: relative; }
 		
 		.flex { position: relative; z-index: 2; }
 		.icon.dnd { 
