--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -42,12 +42,11 @@ input, textarea, select { font-family: 'Lcg'; }
 
 a { color: $colorBlack; }
 
-.dropTarget { padding: 0px 2px; }
 .dropTarget.isOver.middle { background: rgba(255,187,44,0.3) !important; }
-.dropTarget.isOver.top { box-shadow: 0px 2px 0px $colorOrange inset; }
-.dropTarget.isOver.bottom { box-shadow: 0px -2px 0px $colorOrange inset; }
-.dropTarget.isOver.left { box-shadow: 2px 0px 0px $colorOrange inset; }
-.dropTarget.isOver.right { box-shadow: -2px 0px 0px $colorOrange inset;}
+.dropTarget.isOver.top { box-shadow: 0px -2px 0px $colorOrange; }
+.dropTarget.isOver.bottom { box-shadow: 0px 2px 0px $colorOrange; }
+.dropTarget.isOver.left { box-shadow: -2px 0px 0px $colorOrange; }
+.dropTarget.isOver.right { box-shadow: 2px 0px 0px $colorOrange;}
 
 /* DropTarget for Layout.Row */
 .dropTarget.targetTop.isOver.top { box-shadow: 0px -2px 0px $colorOrange inset; }
