--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -1,5 +1,36 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockBookmark { padding: 7px 0px; }
+	.block.blockBookmark {
+		.dropTarget { border-radius: 4px; }
+	
+		.inner { display: flex; border-radius: inherit; border: 1px solid #dfddd0; transition: border-color 0.2s ease-in-out; cursor: pointer; }
+		.inner:hover { border-color: #aca996; }
+		
+		.inner {
+			.side.left { width: 66.67%; padding: 12px 16px 13px 16px; }
+			.side.right { width: 33.33%; border-radius: 0px 2px 2px 0px; overflow: hidden; }
+		}
+		
+		.inner.vertical { display: block; padding-top: 112px; }
+		.inner.vertical {
+			.side.left { width: 100%; border-radius: 0px; }
+			.side.right { position: absolute; top: 1px; left: 1px; height: 112px; width: calc(100% - 2px); border-radius: 4px 4px 0px 0px; }
+			
+			.img { background-position: top center; }
+		}
+
+		.title { font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; }
+		.descr { font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; overflow: hidden; margin: 2px 0px 5px 0px; }
+		.link { font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; overflow: hidden; white-space: nowrap; }
+		
+		.img {
+			width: 100%; height: 100%; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
+			background-size: cover; background-position: center center;
+		}
+		
+		.icon.fav { width: 16px; height: 16px; margin: -4px 4px 0px 0px; }
+	}
+	
+	.block.blockBookmark > .wrapContent > .selectable > .dropTarget { padding-top: 4px; padding-bottom: 2px; }
 }
