#93: link preview popup

--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -20,7 +20,7 @@
 			.img { background-position: top center; }
 		}
 
-		.title { font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; }
+		.name { font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; }
 		.descr { font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; overflow: hidden; margin: 2px 0px 5px 0px; }
 		.link { font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; overflow: hidden; white-space: nowrap; }
 		
