media style refactoring

--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -1,14 +1,14 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockImage { padding: 7px 0px; }
-	.block.blockImage.isResizing * { cursor: nwse-resize; }
+	.block.blockMedia { padding: 7px 0px; }
+	.block.blockMedia.isResizing * { cursor: nwse-resize; }
 	
-	.block.blockImage {
+	.block.blockMedia {
 		.loaderWrapper { border-radius: 4px; border: solid 1px #d2d0c2; height: 48px; width: 100%; }
 		.error { margin: 0px; font-size: 13px; line-height: 18px; }
 		
-		.wrap { max-width: 100%; position: relative; display: inline-block; }
+		.wrap { max-width: 100%; position: relative; display: inline-block; overflow: hidden; }
 		.img { width: 100%; display: block; }
 		
 		.icon.resize {
@@ -21,15 +21,21 @@
 			background-image: url('~img/icon/menu/file/dots.svg'); opacity: 0; background-size: 24px 24px; cursor: pointer; z-index: 1;
 		}
 	}
-	.block.blockImage > .wrapContent > .selectable > .dropTarget { line-height: 0px; }
+	.block.blockMedia > .wrapContent > .selectable > .dropTarget { line-height: 0px; }
 	
-	.block.blockImage:hover {
+	.block.blockMedia:hover {
 		.icon.resize { opacity: 1; }
 		.icon.dots { opacity: 1; }
 	}
 	
-	.block.blockImage > .wrapContent > .selectable.isSelected > .dropTarget > .wrap {
+	.block.blockMedia > .wrapContent > .selectable.isSelected > .dropTarget > .wrap {
 		.icon.resize { opacity: 1; }
 		.icon.dots { opacity: 1; }
+	}
+	
+	.block.blockMedia > .wrapContent > .selectable > .dropTarget > .wrap.isPlaying {
+		.icon.resize { display: none; }
+		.icon.dots { display: none; }
+		.icon.play { display: none; }
 	}
 }
