image resizing fix

--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -9,7 +9,7 @@
 		.error { margin: 0px; font-size: 13px; line-height: 18px; }
 		
 		.wrap { max-width: 100%; position: relative; display: inline-block; overflow: hidden; }
-		.img { width: 100%; display: block; }
+		.media { width: 100%; display: block; }
 		
 		.icon.resize {
 			width: 20px; height: 20px; position: absolute; right: 2px; bottom: 2px;
@@ -20,6 +20,13 @@
 			width: 32px; height: 32px; border-radius: 8px; background-color: rgba(0,0,0,0.35); position: absolute; right: 10px; top: 10px;
 			background-image: url('~img/icon/menu/file/dots.svg'); opacity: 0; background-size: 24px 24px; cursor: pointer; z-index: 1;
 		}
+		
+		.icon.play {
+			width: 64px; height: 64px; border-radius: 100%; position: absolute; left: 50%; top: 50%; margin: -32px 0px 0px -32px;
+			background-image: url('~img/icon/play.svg'); background-color: rgba(255,255,255,0.7); cursor: pointer;
+			background-size: 24px 28px; background-position: 24px center;
+		}
+		.icon.play:hover { background-color: rgba(255,255,255,0.9); }
 	}
 	.block.blockMedia > .wrapContent > .selectable > .dropTarget { line-height: 0px; }
 	
