--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -13,7 +13,7 @@
 		
 	.img {
 		width: 100%; height: 112px; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
-		background-size: cover; background-position: top center; border-bottom: 1px solid #eae9e0;
+		background-size: cover; background-position: center center; border-bottom: 1px solid #eae9e0;
 	}
 		
 	.icon.fav { width: 16px; height: 16px; margin: -4px 4px 0px 0px; }
