--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -17,7 +17,7 @@
 			.side.left { width: 100%; border-radius: 0px; }
 			.side.right { position: absolute; top: 1px; left: 1px; height: 112px; width: calc(100% - 2px); border-radius: 4px 4px 0px 0px; }
 			
-			.img { background-position: top center; }
+			.img { background-position: center center; }
 		}
 
 		.name { font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; }
