--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -1,3 +1,5 @@
+@import "~scss/_vars";
+
 .smile { display: inline-block; vertical-align: top; width: 24px; height: 24px; text-align: center; line-height: 24px; }
 .smile {
 	.emoji-mart-emoji { height: 100%; display: inline-block; vertical-align: middle; }
