--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -1,16 +1,18 @@
 @import "~scss/_vars";
 
 .linkPreview {
-	position: absolute; left: 0px; top: 0px; width: 320px; z-index: 100; display: none; opacity: 0; 
+	position: absolute; left: 0px; top: 0px; width: 320px; height: 284px; z-index: 100; display: none; opacity: 0; 
 	transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .linkPreview {
-	.content { background: #fff; box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.35); border-radius: 8px; }
-	.loaderWrapper { margin: 8px auto; }
+	.content { background: #fff; box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.35); border-radius: 8px; position: relative; height: 100%; }
+	.loaderWrapper { margin: 0px; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
 	.name { font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; }
 	.descr { font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; overflow: hidden; margin: 2px 0px 5px 0px; }
 	.link { font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; overflow: hidden; white-space: nowrap; }
+	
+	.polygon { position: absolute; left: 0px; width: 100%; /*opacity: 0.7; background: pink;*/ }
 		
 	.img {
 		width: 100%; height: 112px; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
@@ -19,7 +21,10 @@
 		
 	.icon.fav { width: 16px; height: 16px; margin: -4px 4px 0px 0px; }
 	
-	.head { padding: 8px 16px; letter-spacing: -0.08px; color: #aca996; font-weight: 500; border-bottom: 1px solid #eae9e0; }
+	.head { 
+		padding: 8px 16px; letter-spacing: -0.08px; color: #aca996; font-weight: 500; position: absolute; left: 0px; width: 100%;
+		height: 40px; 
+	}
 	.head {
 		.item { display: inline-block; vertical-align: middle; margin-right: 16px; cursor: pointer; transition: $transitionFast; }
 		.item:hover { color: $colorBlack; }
@@ -27,4 +32,15 @@
 	}
 	
 	.info { padding: 16px; }
+}
+
+.linkPreview.top {
+	.head { border-top: 1px solid #eae9e0; bottom: 0px; }
+	.content { padding-bottom: 40px; }
+	.img { border-radius: 8px 8px 0px 0px; border-top: 0px; }
+}
+
+.linkPreview.bottom {
+	.head { border-bottom: 1px solid #eae9e0; top: 0px; }
+	.content { padding-top: 40px; }
 }
