--- a/src/scss/component/linkPreview.scss
+++ b/src/scss/component/linkPreview.scss
@@ -1,8 +1,8 @@
 @import "~scss/_vars";
 
 .linkPreview {
-	position: absolute; left: 0px; top: 0px; width: 320px; height: 284px; z-index: 100; display: none; opacity: 0; 
-	transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
+	position: absolute; left: 0px; top: 0px; width: 320px; height: 264px; z-index: 100; display: none; opacity: 0; 
+	transition: opacity 0.2s ease-in-out;
 }
 
 .linkPreview {
